[package]
name = "rustyengine-sdl"
version = "0.1.0"
authors = ["John Dowson <dowson.john.pony@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = "0.8.1"
specs = "0.16.1"
specs-derive = "0.4.1"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["gfx", "ttf"]